--- a/PALS/res/values/strings.xml
+++ b/PALS/res/values/strings.xml
@@ -9,10 +9,11 @@
 	
     <string-array name="bank_name">
         <item>Select Bank</item>
-        <item>BCA</item>
-        <item>MANDIRI</item>
-        <item>BNI</item>
-        <item>BRI</item>
+        <item>Bank BCA</item>
+        <item>Bank Mandiri</item>
+        <item>Bank BNI</item>
+        <item>Bank BRI</item>
+        <item>Bank DKI</item>
     </string-array>
     
     <string-array name="company">
